@startuml
skinparam classAttributeIconSize 0

package model {
    abstract Base {
        - int SQL_INT_NULL = 0
        - int DEFAULT_ID = 0
        - Date NOW = new Date(System.currentTimeMillis())
        - int id
        - int createdBy
        - Date createdDate
        - int updatedBy
        - Date updatedDate
        - int deletedBy
        - Date deletedDate
        + Base(int id, int createdBy, Date createdDate, int updatedBy, Date updatedDate, int deletedBy, Date deletedDate)
        + Base(int id, int createdBy, Date createdDate, int updatedBy, Date updatedDate)
        + Base(int createdBy)
        + int getId()
        + int getCreatedBy()
        + Date getCreatedDate()
        + int getUpdatedBy()
        + Date getUpdatedDate()
        + void setDeletedBy(int deletedBy)
        + int getDeletedBy()
        + Date getDeletedDate()
        + void setDeletedDate(Date deletedDate)
    }

    class Permission {
        - String name
        - String string
        - String description
        + Permission(..., String name, String string, String description)
        + void setName(String name)
        + String getName()
        + void setString(String string)
        + String getString()
        + void setDescription(String description)
        + String getDescription()
    }
    Base <|-- Permission
    
    class Group {
        - String name
        + Group(..., String name, Group parentGroup)
        + Group(..., String name)
        + void setName(String name)
        + String getName()
        + void setParentGroup(Group parentGroup)
        + Group getParentGroup()
    }
    Base <|-- Group
    Group o-- Group : parentGroup
    
    class GroupPermission {
        + GroupPermission(Group group, Permission permission)
        + void setGroup(Group group)
        + Group getGroup()
        + void setPermission(Permission permission)
        + Permission getPermission()
    }
    Base <|-- GroupPermission
    GroupPermission o-- Permission : permission
    GroupPermission o-- Group : group
    
    class Generator {
        - String name
        - int frequence
        - boolean status
        - String ip
        - String key
        + Generator(..., String name, int frequence, boolean status, String ip, String key)
        + void setName(String name)
        + String getName()
        + void setFrequence(int frequence)
        + int getFrequence()
        + void setStatus(boolean status)
        + boolean getStatus()
        + void setIp(String ip)
        + String getIp()
        + void setKey(String key)
        + String getKey()
        
    }
    Base <|-- Generator
    
    class User {
        - String username
        - String password
        - String salt
        - String firstname
        - Stirng lastname
        - String email
        + User(String username, String password, String salt, String firstname, String lastname, String email, Generator favoriteGenerator)
        + void setUsername(String username)
        + String getUsername()
        + void setPassword(String password)
        + String getPassword()
        + void setSalt(String salt)
        + String getSalt()
        + void setFirstname(String firstname)
        + String getFirstname()
        + void setLastname(String lastname)
        + String getLastname()
        + void setEmail(String email)
        + String getEmail()
    }
    User o-- Generator : favoriteGenerator
    Base <|-- User
    
    class UserGroup {
        + UserGroup(.., User user, Group group)
        + void setUser(User user)
        + User getUser()
        + void getGroup(Group group)
        + Group getGroup()
    }
    UserGroup o-- User : user
    UserGroup o-- Group : group
    Base <|-- UserGroup
    
    class Mic{
        - int decibel
        - int timer 
        - String ip
        - String key
        + Mic(.., int decibel, int timer, String ip, String key, Generator generator)
        + void setDecibel(int decibel)
        + int getDecibel()
        + void setTimer(int timer)
        + int getTimer()
        + void setIp(String ip)
        + String getIp()
        + void setKey(String key)
        + String getKey()
        + void setGenerator(Generator generator)
        + Generator getGenrator()
    }
    Mic o-- Generator
    Base <|-- Mic
    
    class Remote {
        - int command
        - int status 
        - String ip
        - String key
        + Mic(.., int command, int status, String ip, String key, Generator generator)
        + void setCommand(int command)
        + int getCommand()
        + void setStatus(int status)
        + int getStatus()
        + void setIp(String ip)
        + String getIp()
        + void setKey(String key)
        + String getKey()
        + void setGenerator(Generator generator)
        + Generator getGenrator()
    }
    Remote o-- Generator
    Base <|-- Remote
}

@enduml
